# carla-autoware-native

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CarlaSetup.bat  CarlaSetup.sh  CarlaSetupWithRGL.sh  README.md  README_RGL.md  RglSetup.sh
.github/workflows/: _ci-ubuntu.yml  ue5_dev.yml  ue5_pr.yml
CMake/: Common.cmake  Dependencies.cmake  Options.cmake  Toolchain.cmake  Util.cmake
Docs/: build_devcontainer.md  build_docker.md  build_linux_ue5.md  build_windows_ue5.md  camera_postprocess_presets.md  cont_contribution_guidelines.md  content_authoring_props.md  download.md  ext_docs.md  requirements.txt  ros2_native.md  start_introduction.md  start_quickstart.md  tuto_G_bounding_boxes.md  tuto_content_authoring_vehicles.md
LibCarla/: CMakeLists.txt
LibCarla/source/carla/: AtomicList.h  AtomicSharedPtr.h  Buffer.h  BufferPool.h  BufferView.h  Debug.h  Exception.h  FileSystem.cpp  FileSystem.h  Functional.h  GlibcCompat.c  Iterator.h  ListView.h  Logging.h  Memory.h  MoveHandler.h  MsgPack.h  MsgPackAdaptors.h  NonCopyable.h  Platform.h  PythonUtil.h  RecurrentSharedFuture.h  Sockets.h  StopWatch.h  StringUtil.cpp  StringUtil.h  ThreadGroup.h  ThreadPool.h  Time.h  TypeTraits.h
LibCarla/source/carla/client/: Actor.cpp  Actor.h  ActorAttribute.cpp  ActorAttribute.h  ActorBlueprint.cpp  ActorBlueprint.h  ActorList.cpp  ActorList.h  ActorSnapshot.h  BlueprintLibrary.cpp  BlueprintLibrary.h  Client.h  ClientSideSensor.h  DebugHelper.cpp  DebugHelper.h  FileTransfer.cpp  FileTransfer.h  GarbageCollectionPolicy.h  Junction.cpp  Junction.h  Landmark.h  LaneInvasionSensor.cpp  LaneInvasionSensor.h  Light.cpp  Light.h  LightManager.cpp  LightManager.h  LightState.h  Map.cpp  Map.h  Sensor.h  ServerSideSensor.cpp  ServerSideSensor.h  TimeoutException.cpp  TimeoutException.h  Timestamp.h  (+15 more)
LibCarla/source/test/: Buffer.cpp  Buffer.h  Random.h  test.cpp  test.h
LibCarla/source/util/: disable-ue4-macros.h  enable-ue4-macros.h
PythonAPI/: CMakeLists.txt
PythonAPI/carla/: scene_layout.py
PythonAPI/carla/src/: Actor.cpp  Blueprint.cpp  Client.cpp  Commands.cpp  Control.cpp  Exception.cpp  Geometry.cpp  LightManager.cpp  Map.cpp  OSM2ODR.cpp  PythonAPI.cpp  Sensor.cpp  SensorData.cpp  Snapshot.cpp  TrafficManager.cpp  Weather.cpp  World.cpp
PythonAPI/docs/: bp_doc_gen.py  doc_gen.py  doc_gen_snipets.py
PythonAPI/examples/: autoware_demo.py  autoware_demo_with_agnocast.py  compare_lidar_topics.py  control_traffic_light_by_opendrive_id.py  control_traffic_light_by_sign_id.py  draw_skeleton.py  generate_traffic.py  interpolate_camera.py  invertedai_traffic.py  lane_explorer.py  manual_control.py  no_rendering_mode.py  open3d_lidar.py  recorder_replay.py  rgl_test_autoware_demo.py  rgl_test_benchmark.py  rgl_test_regression.py  rgl_test_special_firing.py  rgl_test_topic_hz.sh  sensor_synchronization.py  vehicle_doors_demo.py  vehicle_gallery.py  vehicle_lights_demo.py  visualize_multiple_sensors.py  visualize_radar.py
PythonAPI/examples/rgl_lidar_models/: __init__.py  hesai_at128e2x.py  hesai_pandar128e4x.py  hesai_pandar128e4x_highres.py  hesai_pandar40p.py  hesai_pandarqt.py  hesai_pandarxt32.py  hesai_qt128c2x.py  ouster_os1_64.py  range_meter.py  sick_mrs6000.py  velodyne_vlp16.py  velodyne_vlp32c.py  velodyne_vls128.py
PythonAPI/examples/ros2/: ros2_native.py
PythonAPI/rgl/: measure_lidar_rate.py  test_regression.py  test_special_firing.py
PythonAPI/rgl/docs/: api_reference.md
PythonAPI/rgl/lidar_models/: __init__.py  hesai_pandar128e4x.py  hesai_pandar40p.py  hesai_pandarqt.py  ouster_os1_64.py  sick_mrs6000.py  velodyne_vlp32c.py
PythonAPI/rgl/tests/: test_benchmark.py  test_preset_visual.py  test_regression.py  test_special_firing.py
PythonAPI/test/: .gitignore  requirements.txt  test_connection.py  test_ground_truth.py  test_raycast_sensor.py  test_vehicle_physics.py
PythonAPI/test/API/: prop_control.py  spawn_actor.py  test_apply_textures.py  test_no_rendering_mode.py  test_semantic_segmentation.py  test_sensor_recording.py  test_sensor_recording_fast.py  test_spawn_vehicles.py  test_spawn_walkers.py  test_sync_mode.py
PythonAPI/test/smoke/: __init__.py  test_blueprint.py  test_client.py  test_collision_determinism.py  test_collision_sensor.py  test_determinism.py  test_lidar.py  test_map.py  test_props_loading.py  test_sensor_determinism.py  test_sensor_tick_time.py  test_snapshot.py  test_spawnpoints.py  test_streamming.py  test_sync.py  test_vehicle_physics.py  test_world.py
PythonAPI/test/unit/: __init__.py  test_client.py  test_transform.py  test_vehicle.py
PythonAPI/util/: apply_texture.py  change_map_layer.py  config.py  extract_spawn_points.py  manage_environment_objects.py  manage_traffic_light.py  recorder_comparer.py  show_crosswalks.py  show_junctions.py  show_recorder_file_info.py  show_topology.py  show_traffic_lights.py  spectator_transform.py  start_replaying.py
RclcppBridge/: CMakeLists.txt  RclcppBridge.cpp
Ros2Native/: CMakeLists.txt
Ros2Native/LibCarlaRos2Native/: CMakeLists.txt
Unreal/: CMakeLists.txt
Unreal/CarlaUnreal/: CarlaUnreal.uproject
Unreal/CarlaUnreal/Config/: DefaultEngine.ini  DefaultGame.ini
Unreal/CarlaUnreal/Source/: CarlaUnreal.Target.cs  CarlaUnrealEditor.Target.cs
Unreal/Package/: Compress.cmake
Util/: download_from_gdrive.py
Util/BuildDependencyShare/: .gitignore  activate.sh  build-dependency-share.sh
Util/BuildShare/: .gitignore  activate.sh  build-share.sh
Util/Docker/: Base.Dockerfile  Development.Dockerfile  Release.Dockerfile  build.sh  run.sh
Util/SetupUtils/: InstallPrerequisites.bat  InstallPrerequisites.sh
Util/Tools/: Deploy.sh  Environment.sh  Import.py
docker/: .env.example  Dockerfile  README.md  docker-compose.yml
tools/: activate_ue5_clone.sh  carla-env.sh  generate_cyclonedds_publishers.py
work.knowledge/: 000_summary.md  001_rgl-integration-architecture.md  002_coordinate-transform.md  003_mesh-extraction.md  004_ros2-publish.md  005_performance-optimization.md  006_build-system.md  007_debugging-techniques.md  008_awsim-compatibility.md
(+1192 files in other folders)
